src/objects/Green_Tree_Oppy_Extension__c.object
<CustomObject>
    <description>This object has been created to capture the required field details for Green Tree Opportunity and is a related child record of opportunity used only in the case of opportunity records having record type as -Green Tree.</description>
    <fields>
        <fullName>Advance_Payoff_Date__c</fullName>
        <label>Advance Payoff Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Average_CC_Sales__c</fullName>
        <label>Average CC Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Gross_Sales__c</fullName>
        <label>Average Gross Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calculate_Due_Dates__c</fullName>
        <label>Calculate Due Dates</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Daily_Payment_Amount__c</fullName>
        <label>Daily Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Balance__c</fullName>
        <description>NO FORMULA AS OF NOW</description>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Days_to_Repay__c</fullName>
        <formula>No_of_Payments__c/5*7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Days to Repay</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Payments__c</fullName>
        <label># of Payments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Green_Tree</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ProductTerm__c</fullName>
        <label>Term</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>Loan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Green Tree Oppy Extension</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>G{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Green Tree Oppy Extensions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>